lints.workspace = true

[package]
name = "netgauze-serde-macros"
version = "0.9.0"
edition = "2024"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Helper macros to make ser/deser binary protocols easier
"""
keywords = ["protocol"]
categories = ["parsing"]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
syn = { workspace = true, default-features = false, features = ["full"] }
quote = { workspace = true }

[dev-dependencies]
netgauze-parse-utils = { workspace = true }
netgauze-locate = { workspace = true }
nom = { workspace = true }
trybuild = { workspace = true, features = ["diff"] }
