lints.workspace = true

[package]
name = "netgauze-udp-notif-pkt"
version = "0.9.0"
edition = "2024"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
UDP-Notif (draft-ietf-netconf-udp-notif) packet library for YANG Push streaming telemetry. Provides zero-copy wire format handling, automatic JSON/CBOR deserialization, and type-safe access to RFC 8639/8641 subscription notifications.
"""
keywords = ["udp-notif", "netconf", "yang", "yang-push"]
categories = ["network-programming", "parsing"]


[dependencies]
netgauze-locate = { workspace = true, optional = true }
netgauze-parse-utils = { workspace = true, optional = true }
netgauze-serde-macros = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }

serde = { workspace = true, features = ["derive"] }
nom = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
bytes = { workspace = true, features = ["serde"] }
tokio-util = { workspace = true, default-features = false, features = ["codec"], optional = true }
arbitrary = { workspace = true, optional = true }
arbitrary_ext = { workspace = true, optional = true }
serde_json = { workspace = true }
chrono = { workspace = true, default-features = true, features = ["serde"] }
ciborium = { workspace = true }
either = { workspace = true }

[features]
default = ["serde", "codec"]
serde = ["nom", "byteorder", "netgauze-locate", "netgauze-parse-utils", "netgauze-serde-macros"]
codec = ["tokio-util"]
fuzz = ["arbitrary", "arbitrary_ext"]

[dev-dependencies]
netgauze-pcap-reader = { workspace = true }
netgauze-parse-utils = { workspace = true, features = ["test-helpers"] }
serde_json = { workspace = true }
rstest = { workspace = true }
pcap-parser = { workspace = true, features = ["data"] }
ciborium = { workspace = true }
