[package]
name = "netgauze-udp-notif-service"
version = "0.6.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
UDP-Notif service
"""
keywords = ["udp-notif", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
async-channel = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
netgauze-parse-utils = { workspace = true }
netgauze-udp-notif-pkt = { workspace = true, features = ["codec"] }
serde = { workspace = true, features = ["derive"] }
socket2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics", "trace", "logs"] }
either = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
serde_json = { workspace = true }
